feat: update clock indicator color

--- a/index.html
+++ b/index.html
@@ -194,12 +194,13 @@
     font-weight:700;
     font-size: 24px; /* Крупнее */
     letter-spacing: .08em; /* Шире */
-    color:red;
+    color: var(--accent);
     opacity: 0.9;
-    text-shadow: 0 0 10px rgba(255,0,0,.5), 0 0 4px rgba(0,0,0,.8);
+    text-shadow: 0 0 10px rgba(255,157,45,.5), 0 0 4px rgba(0,0,0,.8);
     pointer-events:none;
     transform: translateY(-2px); /* Чуть выше */
-	<!-- font-family: ui-monospace, 'SF Mono', 'Menlo', 'Consolas', monospace; -->
+    /* font-family: ui-monospace, 'SF Mono', 'Menlo', 'Consolas', monospace; */
+  }
 </style>
 </head>
 <body>
